--- a/style/main.css
+++ b/style/main.css
@@ -13,20 +13,39 @@ nav {
     background-color: white;
 }
 
-nav .content {
+.content {
     display: flex;
     justify-content: space-between;
     width: 1000px;
     align-items: center;
 }
 
-nav .content-img-logo {
-    border-right: solid black 1px;
-    padding-right: 10px;
+.content-img-logo {
+    border-right: solid black 2px;
+    padding-right: 15px;
 }
+
+.content-text-logo {
+    padding-left: 10px;
+}
+
+.content .three span {
+    margin-right: 10px;
+}
+
 
 nav img {
     height: 30px;
+}
+
+nav .search-icon{
+    position: absolute;
+    margin-left: 75px;
+    margin-top: 6px;
+    height: 15px;
+    width: 15px;
+    color: #D0D0D0;
+    
 }
 
 nav .search {
@@ -57,6 +76,7 @@ nav .search {
 
 .feeds header {
     display: flex;
+    align-items: center;
 }
 
 .feeds .header-left {
@@ -66,11 +86,10 @@ nav .search {
 
 .feeds .header-p {
     margin-left: 10px;
-    align-items: center;
 }
 
 .feeds .header-right {
-    margin: 0 0 0 auto;
+    margin: 0 10px 0 auto;
 }
 
 .header-left .location {
@@ -104,6 +123,12 @@ nav .search {
     display: flex;
     justify-content: space-between;
     margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.emotion span {
+    margin-right: 10px;
 }
 
 .emo-right {
@@ -135,15 +160,16 @@ nav .search {
     line-height: 20px;
 }
 
-.comment-box span {
+.comment-box a {
     font-weight: bold;
     margin-right: 3px;
 }
 
 .comment-time {
-    margin-left: 10px;
     color: gray;
+    margin-left: 10px;
     margin-bottom: 3px;
+    margin-top: 2px;
 }
 
 .new-comment {
@@ -172,6 +198,7 @@ nav .search {
 
 .mine {
     display: flex;
+    align-items: center;
 }
 
 .mine img {
@@ -184,7 +211,6 @@ nav .search {
 
 .mine-container {
     margin-left: 5px;
-    align-items: center;
 }
 
 .mine-name {
@@ -209,7 +235,7 @@ nav .search {
     display: flex;
     height: 30px;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .title-story {
@@ -227,6 +253,8 @@ nav .search {
 }
 
 .friend {
+    display: flex;
+    align-items: center;
     margin-top: 10px;
     margin-left: 20px;
 }
@@ -235,11 +263,7 @@ nav .search {
     height: 35px;
     width: 35px;
     margin-right: 10px;
-    border-radius: 15px;
-}
-
-.friend-info {
-    display: inline-block;
+    border-radius: 20px;
 }
 
 .friend-name {
@@ -259,7 +283,7 @@ nav .search {
     display: flex;
     height: 30px;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 .recommend-story {
@@ -277,6 +301,8 @@ nav .search {
 }
 
 .recommend {
+    display: flex;
+    align-items: center;
     margin-top: 10px;
     margin-left: 20px;
 }
@@ -285,7 +311,7 @@ nav .search {
     height: 35px;
     width: 35px;
     margin-right: 10px;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 .recommend-info {
@@ -296,10 +322,11 @@ nav .search {
     font-weight: bold;
 }
 
-.recommend button {
+.recommend-button {
     border: none;
     color: #0095F6;
     width: 70px;
+    margin-left: 5px;
     font-weight: bold;
     background-color: white;
     justify-content: center;
