--- a/style/common.css
+++ b/style/common.css
@@ -1,5 +1,5 @@
 * {
-    font-family: 'NanumBarunGothic';
+    font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     font-size: 13px;
     margin: 0 0;
 }
