--- a/style/main.css
+++ b/style/main.css
@@ -30,12 +30,12 @@ nav {
 }
 
 .content .three span {
-    margin-right: 10px;
+    margin-right: 15px;
 }
 
 
 nav img {
-    height: 30px;
+    height: 25px;
 }
 
 nav .search-icon{
@@ -62,7 +62,7 @@ nav .search {
     display: flex;
     width: 1000px;
     margin: 0 auto;
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 #main .feeds {
@@ -84,8 +84,12 @@ nav .search {
     align-items: center;
 }
 
+.feeds .header-left img {
+    margin-bottom: 10px;
+}
+
 .feeds .header-p {
-    margin-left: 10px;
+    margin-left: 10px;;
 }
 
 .feeds .header-right {
@@ -168,7 +172,7 @@ nav .search {
 .comment-time {
     color: gray;
     margin-left: 10px;
-    margin-bottom: 3px;
+    margin-bottom: 7px;
     margin-top: 2px;
 }
 
@@ -270,6 +274,10 @@ nav .search {
     font-weight: bold;
 }
 
+.friend-last-login {
+    color: #B0B0B0;
+}
+
 .recommend-container {
     height: 221px;
     width: 291px;
@@ -322,12 +330,26 @@ nav .search {
     font-weight: bold;
 }
 
+.recommend-follow {
+    color: #B0B0B0;
+}
+
 .recommend-button {
     border: none;
     color: #0095F6;
-    width: 70px;
-    margin-left: 5px;
+    width: 60px;
+    margin-left: 20px;
     font-weight: bold;
     background-color: white;
     justify-content: center;
+}
+
+.other {
+    width: 291px;
+    color: #C7C7C7;
+    margin-top: 15px;
+}
+
+.other p {
+    font-size: 11px;
 }
